// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane P1 — the phone is unchanged (golden) plans list, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "fa8396cda46f9fec930c8e982db3a63580bad39d2bb1cd2a592999859b1e778e",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans list, web 390 1`] = `
{
  "lines": 626,
  "sha256": "fa8396cda46f9fec930c8e982db3a63580bad39d2bb1cd2a592999859b1e778e",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, iOS 390 1`] = `
{
  "lines": 339,
  "sha256": "081ac29179067a9d5a23c33ebea0a6394e706212483373d4b6f2b30b446f5e2d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, web 390 1`] = `
{
  "lines": 339,
  "sha256": "081ac29179067a9d5a23c33ebea0a6394e706212483373d4b6f2b30b446f5e2d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with superseded shown, iOS 390 1`] = `
{
  "lines": 668,
  "sha256": "46dae7d5fe9ba4b8a1e97b5346a904703f5af193bd5518347b5f8e69394e568b",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "9c910edd9a6457a11dfa3706a1faa9c48b3ea7107cb7ad75c6fe3204b06f71cf",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, web 390 1`] = `
{
  "lines": 626,
  "sha256": "9c910edd9a6457a11dfa3706a1faa9c48b3ea7107cb7ad75c6fe3204b06f71cf",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), iOS 390 1`] = `
{
  "lines": 474,
  "sha256": "4146a40eb7cb840fae3522698ec90f5545cc2fa8afe0b4da7dc779589c609410",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), web 390 1`] = `
{
  "lines": 474,
  "sha256": "4146a40eb7cb840fae3522698ec90f5545cc2fa8afe0b4da7dc779589c609410",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, iOS 390 1`] = `
{
  "lines": 463,
  "sha256": "e07c888aa4b20c3c5773afee7ae9a89cc144baed548d94f99aa33dbce2086e2c",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, web 390 1`] = `
{
  "lines": 463,
  "sha256": "e07c888aa4b20c3c5773afee7ae9a89cc144baed548d94f99aa33dbce2086e2c",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer with the pin sheet open, iOS 390 1`] = `
{
  "lines": 566,
  "sha256": "5a38ea2083cec43b855c8978c8b10c0c0645168dc3b1c1ad236741d9a99522d2",
}
`;
